# devcontainer-features

./: .pre-commit-config.yaml  .vale.ini  CLAUDE.md  Justfile  README.md  package.json  pyproject.toml
.github/workflows/: release.yaml  test.yaml
.vale/config/vocabularies/devcontainer-features/: accept.txt
src/biome/: README.md  devcontainer-feature.json  install.sh
src/chezmoi/: README.md  devcontainer-feature.json  install.sh
src/just/: README.md  devcontainer-feature.json  install.sh
src/shellcheck/: README.md  devcontainer-feature.json  install.sh
src/shfmt/: README.md  devcontainer-feature.json  install.sh
src/tmux/: README.md  devcontainer-feature.json  install.sh
src/zsh-autosuggestions/: README.md  devcontainer-feature.json  install.sh
src/zsh-syntax-highlighting/: README.md  devcontainer-feature.json  install.sh
test/biome/: test.sh  version.sh
test/chezmoi/: scenarios.json  test.sh  version.sh
test/just/: scenarios.json  test.sh  version.sh
test/shellcheck/: scenarios.json  test.sh  version.sh
test/shfmt/: scenarios.json  test.sh  version.sh
test/tmux/: scenarios.json  test.sh  version.sh
test/zsh-autosuggestions/: scenarios.json  test.sh
test/zsh-syntax-highlighting/: scenarios.json  test.sh
